# kaiko-cpp-sdk

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
src/: CMakeLists.txt  README.md
src/sdk/: sdk.grpc.pb.cc  sdk.grpc.pb.h  sdk.pb.cc  sdk.pb.h
src/sdk/core/: assets.grpc.pb.cc  assets.grpc.pb.h  assets.pb.cc  assets.pb.h  data_interval.grpc.pb.cc  data_interval.grpc.pb.h  data_interval.pb.cc  data_interval.pb.h  envelope.grpc.pb.cc  envelope.grpc.pb.h  envelope.pb.cc  envelope.pb.h  envelope_status.grpc.pb.cc  envelope_status.grpc.pb.h  envelope_status.pb.cc  envelope_status.pb.h  instrument_criteria.grpc.pb.cc  instrument_criteria.grpc.pb.h  instrument_criteria.pb.cc  instrument_criteria.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h  sort_criteria.grpc.pb.cc  sort_criteria.grpc.pb.h  sort_criteria.pb.cc  sort_criteria.pb.h  source.grpc.pb.cc  source.grpc.pb.h  source.pb.cc  source.pb.h  source_data.grpc.pb.cc  source_data.grpc.pb.h  source_data.pb.cc  source_data.pb.h  window.grpc.pb.cc  window.grpc.pb.h  window.pb.cc  window.pb.h  (+4 more)
src/sdk/stream/aggregated_price_v1/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/aggregated_quote_v2/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/aggregates_direct_exchange_rate_v1/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/aggregates_ohlcv_v1/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/aggregates_spot_exchange_rate_v1/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/aggregates_vwap_v1/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/derivatives_price_v2/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/index_forex_rate_v1/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/index_multi_assets_v1/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/index_v1/: commodity.grpc.pb.cc  commodity.grpc.pb.h  commodity.pb.cc  commodity.pb.h  request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/market_update_v1/: commodity.grpc.pb.cc  commodity.grpc.pb.h  commodity.pb.cc  commodity.pb.h  request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/trades_v1/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
